add almost everything